# Jakarta_Thesis_Klipper

./: .gitignore  README.md  __init__.py  manage.py  pyproject.toml
ma_jakarta/: app.config.sample  settings.yml
ma_jakarta/data/input/: amenities.geojson  flooded.dbf  flooded.shp  flooded.shx  floodprone.dbf  floodprone.shp  floodprone.shx  hd_border.dbf  hd_border.geojson  hd_border.shp  hd_border.shx  population_2020.tif
ma_jakarta/scripts/: osmconvert
ma_jakarta/scripts/analysis/: health_distribution.py  histogram.py  impact_maps.py  node_difference.py  reached_values.py  run_analysis.py  run_histogram.py  run_impact_maps.py  supply_demand.py
ma_jakarta/scripts/analysis/impact_mobility_access/: histogram.py  impact_maps.py  reached_values.py  run_analysis.py
ma_jakarta/scripts/analysis/network_resilience/: emp_value_distribution.py  node_difference.py  resilience.py
ma_jakarta/scripts/data_preprocessing/: admin_border.py  amenities.py  floods.py  flooprone.py  hot_amenities.py  population.py  run_preprocessing.py
ma_jakarta/scripts/isochrone/: graph_preparation.py  isochrone.py
ma_jakarta/scripts/network/: centrality.py  download_network.py  network_preparation.py  run_network.py  speed_limits.yaml
ma_jakarta/scripts/network/network_analysis/: centrality.py  node_dif_cython.pyx  node_difference.py  setup.py
ma_jakarta/scripts/ors/: graph_preparation.py  isochrone.py
